# SysDoc

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: API.md
sysdoc/: __init__.py  config.py  logging_config.py
sysdoc/cli/: __init__.py  app.py
sysdoc/diagnostics/: __init__.py  advanced.py  intelligent.py  speed.py  system.py
sysdoc/hardware/: __init__.py  monitor.py
sysdoc/network/: __init__.py  network.py
sysdoc/security/: __init__.py  security.py
sysdoc/ui/: __init__.py  banner.py
sysdoc/utils/: __init__.py  installer.py  system.py
tests/: test_advanced.py  test_config.py  test_diagnostics.py  test_hardware.py  test_installer.py  test_intelligent.py  test_network.py  test_reports.py  test_security.py  test_speed.py  test_utils.py
